# porcupine-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  SKILLS.md
.claude/: CLAUDE.md  settings.json
.claude/commands/: spec-sync.md  test-crate.md  verify-invariants.md  verify-spec.md  verify.md
.claude/hooks/: spec-sync-on-edit.sh  spec-sync.sh
.github/workflows/: spec-sync.yml
benches/: linearizability.rs
benches/go/: porcupine_bench_test.go
docs/: algorithm.md  all_tests.md  architecture.md  benchmark.md  benchmark_improvements.md  benchmark_results.md  charon_plan.md  hegel_v_proptest.md  optimization.md  self-verified-pipeline.md  spec-sync.md  spec.md
examples/: s2_checker.rs
src/: bitset.rs  checker.rs  invariants.rs  lib.rs  model.rs  types.rs
tests/: go_compat.rs  hegel_properties.rs  nondeterministic.rs  property_tests.rs  quint_mbt.rs  s2_model.rs  tipocket.rs
tests/common/: mod.rs
tla/: NondeterministicModel.qnt  Porcupine.qnt
verify/: Cargo.toml  rust-toolchain.toml
verify/lean/PorcupineVerify/: BitsetSpec.lean  DeduplicateSpec.lean  DfsKernel.lean  PowerSetSpec.lean  lakefile.lean
verify/src/: lib.rs
