[workspace]
members = ["verify"]
resolver = "2"

[package]
name = "porcupine"
version = "0.1.0"
edition = "2024"
description = "A fast linearizability checker for testing concurrent and distributed systems"
license = "MIT"
repository = "https://github.com/debasishg/porcupine-rust"
keywords = ["linearizability", "distributed-systems", "concurrency", "testing"]
categories = ["development-tools::testing"]

[features]
# Enable model-based testing via quint-connect trace replay.
# Requires the `quint-connect` CLI to be installed.
quint-mbt = []

# Charon/Aeneas extraction target.
#
# Swaps SmallVec → Vec<u64> in Bitset and FxHashMap → std::collections::HashMap
# in the DFS cache, replacing all external-crate types with std equivalents so
# Charon can extract clean LLBC.  Concurrency infrastructure (rayon, AtomicBool,
# Mutex, Condvar) is compiled out entirely under this feature.
#
# ONLY for Charon extraction — do not use in production builds or tests.
#
#   charon --crate porcupine --features verify --dest verify/llbc/
verify = []

[dependencies]
rayon = "1"
rustc-hash = "2"
smallvec = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "linearizability"
harness = false
